Updated project meta files as per `bytesparse`

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dist
 build
 eggs
 .eggs
+env
 parts
 bin
 var
@@ -36,8 +37,10 @@ htmlcov
 
 # Translations
 *.mo
+src/*/*.html
+tests/*.html
 
-# Mr Developer
+# IDE
 .mr.developer.cfg
 .project
 .pydevproject
