--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,14 @@
 [bdist_wheel]
 universal = 1
 
+[check-manifest]
+ignore =
+    *.html
+    *.pyd
+    *.so
 
 [flake8]
-max-line-length = 140
+max-line-length = 120
 exclude = */migrations/*
 
 [tool:pytest]
@@ -17,7 +22,7 @@ python_files =
     tests.py
 addopts =
     -ra
-    --strict
+    --strict-markers
     --doctest-modules
     --doctest-glob=\*.rst
     --tb=short
