--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,25 @@
-; a generative tox configuration, see: https://tox.readthedocs.io/en/latest/config.html#generative-envlist
-
+; This is the ordered list of environments to run with the basic tox command.
+; A generative tox configuration; see: https://tox.readthedocs.io/en/latest/config.html#generative-envlist
 [tox]
 envlist =
     clean,
     check,
-    {py37,py38,py39,pypy3},
+    {py37,py38,py39,py310,pypy3},
     report,
     docs
 skip_missing_interpreters = true
 
+
+; This is the environment matrix.
 [testenv]
 basepython =
-    pypy3: {env:TOXPYTHON:pypy3}
     py37: {env:TOXPYTHON:python3.7}
-    {py38,docs,spell}: {env:TOXPYTHON:python3.8}
+    py38: {env:TOXPYTHON:python3.8}
     py39: {env:TOXPYTHON:python3.9}
-    {bootstrap,clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3}
+    py310: {env:TOXPYTHON:python3.10}
+    {clean,check,report}: {env:TOXPYTHON:python3}
+    {docs,spell}: {env:TOXPYTHON:python3}
+    pypy3: {env:TOXPYTHON:pypy3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -23,31 +27,27 @@ passenv =
     *
 usedevelop = false
 deps =
+    coverage
     pytest
-    pytest-travis-fold
-    pytest-cov
 commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv tests}
+    {posargs:coverage run -m pytest -vv tests}
 
-[testenv:bootstrap]
-deps =
-    jinja2
-    matrix
-skip_install = true
-commands =
-    python ci/bootstrap.py
 
+; Run this environment to check spelling within documentation.
 [testenv:spell]
+deps =
+    -r{toxinidir}/docs/requirements.txt
+    pyenchant
+    sphinxcontrib-spelling
 setenv =
     SPELLCHECK=1
 commands =
     sphinx-build -b spelling docs dist/docs
 skip_install = true
-deps =
-    -r{toxinidir}/docs/requirements.txt
-    sphinxcontrib-spelling
-    pyenchant
 
+
+; Run this environment to rebuild documentation.
+; NOTE: Files under _autosummary may not be regererated, delete manually before execution!
 [testenv:docs]
 deps =
     -r{toxinidir}/docs/requirements.txt
@@ -55,14 +55,16 @@ commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
 
+
+; Run this environment to check the code base consistency.
 [testenv:check]
 deps =
-    docutils
     check-manifest
+    docutils
     flake8
-    readme-renderer
-    pygments
     isort
+    pygments
+    readme-renderer
     twine
 skip_install = true
 commands =
@@ -72,35 +74,37 @@ commands =
     flake8 src setup.py
     isort --verbose --check-only --diff src tests setup.py
 
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-commands =
-    coveralls []
 
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    coverage xml --ignore-errors
-    codecov []
-
-
+; Run this environment to generate coverage report.
 [testenv:report]
-deps = coverage
+deps =
+    coverage
 skip_install = true
 commands =
-    ;coverage combine --append
+    coverage xml
     coverage report
     coverage html
 
-[testenv:clean]
-commands = coverage erase
-skip_install = true
-deps = coverage
 
+; Run this environment to cleanup coverage report.
+[testenv:clean]
+deps =
+    coverage
+commands =
+    coverage erase
+skip_install = true
+
+
+; Settings for flake8.
 [flake8]
 ;ignore = E203
 
+
+; Settings for GitHub Actions.
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: {py310,clean,check,report,docs,spell}
+    pypy-3.9: pypy3
