--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,15 +1,14 @@
+graft .github
 graft docs
 graft src
-graft ci
 graft tests
 graft _static
-graft _templates
 graft pyinstaller
 
-include .bumpversion.cfg
 include .coveragerc
-include .cookiecutterrc
 include .editorconfig
+include .gitignore
+include .readthedocs.yaml
 
 include AUTHORS.rst
 include CHANGELOG.rst
@@ -17,6 +16,6 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 
-include tox.ini .travis.yml appveyor.yml
+include tox.ini
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib
